--- a/app/package.json
+++ b/app/package.json
@@ -29,9 +29,6 @@
   ],
   "cordovaPlatforms": [
     "ios",
-    {
-      "platform": "android",
-      "locator": "browser"
-    }
+    "android"
   ]
 }
