--- a/app/bower.json
+++ b/app/bower.json
@@ -5,6 +5,7 @@
     "ionic": "driftyco/ionic-bower#1.0.1"
   },
   "dependencies": {
-    "ionic-ion-auto-list-divider": "~1.0.0"
+    "ionic-ion-auto-list-divider": "~1.0.0",
+    "ionic-filter-bar": "~1.0.4"
   }
 }
