--- a/app/package.json
+++ b/app/package.json
@@ -11,9 +11,12 @@
   },
   "devDependencies": {
     "bower": "^1.3.3",
+    "fs": "0.0.2",
+    "gulp-inject": "^1.3.0",
+    "gulp-replace-task": "^0.2.1",
     "gulp-util": "^2.2.14",
     "shelljs": "^0.3.0",
-    "gulp-inject": "^1.3.0"
+    "yargs": "^3.15.0"
   },
   "cordovaPlugins": [
     "cordova-plugin-device",
