--- a/app/package.json
+++ b/app/package.json
@@ -2,21 +2,27 @@
   "name": "historico-saude",
   "version": "1.0.0",
   "description": "Histórico de Saúde",
+  "engines": {
+    "node": "0.10.x"
+  },
   "dependencies": {
     "gulp": "^3.5.6",
     "gulp-sass": "^1.3.3",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
-    "gulp-rename": "^1.2.0"
+    "gulp-rename": "^1.2.0",
+    "bower": "^1.3.3"
   },
   "devDependencies": {
-    "bower": "^1.3.3",
     "fs": "0.0.2",
     "gulp-inject": "^1.3.0",
     "gulp-replace-task": "^0.2.1",
     "gulp-util": "^2.2.14",
     "shelljs": "^0.3.0",
     "yargs": "^3.15.0"
+  },
+  "scripts": {
+    "postinstall": "bower install"
   },
   "cordovaPlugins": [
     "cordova-plugin-device",
