--- a/app/bower.json
+++ b/app/bower.json
@@ -5,6 +5,8 @@
     "ionic": "driftyco/ionic-bower#1.0.1",
     "ionic-ion-auto-list-divider": "~1.0.0",
     "ionic-filter-bar": "~1.0.4",
-    "ngCordova": "~0.1.17-alpha"
+    "ngCordova": "~0.1.17-alpha",
+    "ionic-datepicker": "~0.6.0",
+    "ionic-timepicker": "~0.2.0"
   }
 }
