--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,9 @@
   "version": "0.0.0",
   "description": "a Sails application",
   "keywords": [],
+  "engines": {
+    "node": "0.10.x"
+  },
   "dependencies": {
     "ejs": "~0.8.4",
     "grunt": "0.4.2",
@@ -21,20 +24,12 @@
     "include-all": "~0.1.3",
     "rc": "~0.5.0",
     "sails": "~0.11.0",
-    "sails-disk": "~0.10.0"
+    "sails-disk": "~0.10.0",
+    "sails-mongo": "^0.11.2"
   },
   "scripts": {
     "debug": "node debug app.js",
     "start": "node app.js"
   },
-  "engines": {
-    "node": "0.10.x"
-  },
-  "main": "app.js",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/giorgiofellipe/server.git"
-  },
-  "author": "giorgiofellipe",
-  "license": ""
+  "main": "app.js"
 }
