--- a/app/package.json
+++ b/app/package.json
@@ -6,12 +6,15 @@
     "node": "0.10.x"
   },
   "dependencies": {
+    "bower": "^1.3.3",
+    "glob": "^5.0.14",
     "gulp": "^3.5.6",
-    "gulp-sass": "^1.3.3",
     "gulp-concat": "^2.2.0",
     "gulp-minify-css": "^0.3.0",
     "gulp-rename": "^1.2.0",
-    "bower": "^1.3.3"
+    "gulp-sass": "^1.3.3",
+    "lodash": "^3.10.0",
+    "minimatch": "^2.0.10"
   },
   "devDependencies": {
     "fs": "0.0.2",
