--- a/app/package.json
+++ b/app/package.json
@@ -6,6 +6,7 @@
     "node": "0.10.x"
   },
   "dependencies": {
+    "express": "~4.4.3",
     "bower": "^1.3.3",
     "glob": "^5.0.14",
     "gulp": "^3.5.6",
